--- a/src/ADAL.PCL/ADAL.PCL.csproj
+++ b/src/ADAL.PCL/ADAL.PCL.csproj
@@ -84,6 +84,18 @@
     <Compile Include="Base64UrlEncoder.cs" />
     <Compile Include="CacheQueryData.cs" />
     <Compile Include="CallState.cs" />
+    <Compile Include="IDispatcher.cs" />
+    <Compile Include="Internal\Telemetry\AggregatedDispatcher.cs" />
+    <Compile Include="Internal\Telemetry\ApiEvent.cs" />
+    <Compile Include="Internal\Telemetry\BrokerEvent.cs" />
+    <Compile Include="Internal\Telemetry\CacheEvent.cs" />
+    <Compile Include="Internal\Telemetry\CryptographyEvent.cs" />
+    <Compile Include="Internal\Telemetry\DefaultDispatcher.cs" />
+    <Compile Include="Internal\Telemetry\DefaultEvent.cs" />
+    <Compile Include="Internal\Telemetry\EventConstants.cs" />
+    <Compile Include="Internal\Telemetry\EventsBase.cs" />
+    <Compile Include="Internal\Telemetry\HttpEvent.cs" />
+    <Compile Include="Internal\Telemetry\UIEvent.cs" />
     <Compile Include="ISecureClientSecret.cs" />
     <Compile Include="RequestData.cs" />
     <Compile Include="ClientAssertion.cs" />
@@ -93,6 +105,7 @@
     <Compile Include="DeviceAuthJWTResponse.cs" />
     <Compile Include="DeviceCodeResponse.cs" />
     <Compile Include="DeviceCodeResult.cs" />
+    <Compile Include="Telemetry.cs" />
     <Compile Include="HttpClientWrapper.cs" />
     <Compile Include="HttpClientFactory.cs" />
     <Compile Include="HttpMessageHandlerFactory.cs" />
@@ -138,6 +151,7 @@
     <Compile Include="WsTrustRequest.cs" />
     <Compile Include="WsTrustResponse.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
